# RenderUI

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  DOCKER_TEST_GUIDE.md  Dockerfile  GITHUB_ACTIONS_GUIDE.md  LICENSE  README.md  build.sh  build_in_docker.sh  check_github_actions.sh  docker-compose.yml  install_docker_mac.sh  setup_ubuntu.sh  verify_build.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
cmake/: renderui.pc.in
docs/: MULTI_TEXTURE_ARCHITECTURE.md  README.md  stage5_summary.md
docs/architecture/: SYSTEM_DESIGN.md
docs/diagrams/: architecture_layers.plantuml  module_diagram.plantuml  render_flow.plantuml  video_render_flow.plantuml
docs/requirements/: PRD.md
examples/: 360_camera_demo.cpp  CMakeLists.txt  README.md  perfetto_demo.cpp  ui_demo.cpp
examples/config/: 360_camera.json  ui_demo.json
include/Component/: Application.hpp  ApplicationContext.hpp  CameraInput.hpp  EventDispatcher.hpp  EventLoop.hpp  JsonParser.hpp  Model3D.hpp  PboPool.hpp  PerfettoTracker.hpp  RenderContext.hpp  Types.hpp  VideoStream.hpp  Widget.hpp  WidgetTree.hpp  Window.hpp  WindowManager.hpp
include/Component/widgets/: Button.hpp  ImageView.hpp  Label.hpp
shaders/: README.md  model3d_fragment.glsl  model3d_vertex.glsl  postprocessor_blur.glsl  postprocessor_color_adjust.glsl  postprocessor_grayscale.glsl  postprocessor_rounded.glsl  postprocessor_shadow.glsl  postprocessor_vertex.glsl  videostream_fragment.glsl  videostream_vertex.glsl
src/: README.md  main.cpp  test_dbus.cpp  test_event.cpp  test_layout.cpp  test_model3d.cpp  test_resource.cpp  test_video_stream.cpp  test_widget.cpp
src/core/: Application.cpp  Application.hpp  ApplicationContext.cpp  CairoGlRenderer.cpp  CairoGlRenderer.hpp  CameraInput.cpp  CameraInput.hpp  DebugMenu.cpp  EglContext.cpp  EglContext.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventLoop.cpp  EventLoop.hpp  Logger.cpp  RenderContext.cpp  RenderContext.hpp  Surface.cpp  Surface.hpp  Types.hpp  WaylandSurface.cpp  WaylandSurface.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
src/ipc/: CanSignal.cpp  CanSignal.hpp  DBusAdapter.cpp  DBusAdapter.hpp
src/layout/: AbsoluteLayout.cpp  AbsoluteLayout.hpp  FlexLayout.cpp  FlexLayout.hpp  LayoutTypes.hpp
src/render/: AsyncTextureUploader.cpp  AsyncTextureUploader.hpp  PboPool.cpp  PboPool.hpp  PostProcessor.cpp  PostProcessor.hpp  SkiaRenderer.cpp  SkiaRenderer.hpp
src/resource/: ImageLoader.cpp  ImageLoader.hpp  ResourceManager.cpp  ResourceManager.hpp
src/utils/: JsonParser.cpp  JsonParser.hpp  Logger.cpp  Logger.hpp  PerfettoTracker.cpp  PerfettoTracker.hpp
src/widget/: Container.cpp  Container.hpp  DebugMenu.hpp  Widget.cpp  Widget.hpp  WidgetTree.cpp  WidgetTree.hpp
src/widget/widgets/: Button.cpp  Button.hpp  CheckBox.cpp  CheckBox.hpp  ImageView.cpp  ImageView.hpp  Label.cpp  Label.hpp
src/widget/widgets/media/: Model3D.cpp  Model3D.hpp  VideoStream.cpp  VideoStream.hpp
tests/: CMakeLists.txt  README.md  RUNNING_TESTS.md  test_basic.cpp  test_dbus.cpp  test_event.cpp  test_layout.cpp  test_main.cpp  test_model3d.cpp  test_resource.cpp  test_video_stream.cpp  test_widget.cpp
